Repair overflow problem

--- a/src/scss/header/header.scss
+++ b/src/scss/header/header.scss
@@ -1,9 +1,9 @@
 .header {
   height: 100vh;
-  width: 100vw;
   background-image: url("./images/Atacama1920x1280.jpg");
   @include parallax();
   color: $color-light;
+  padding: 0;
 
   &__title-container {
     position: absolute;
