--- a/src/style.scss
+++ b/src/style.scss
@@ -22,6 +22,10 @@ body {
   margin: 0;
 }
 
+main {
+  padding: 0;
+}
+
 h1,
 h2,
 h3,
